<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, GreenDroidActionBarExampleActivity!</string>
    <string name="app_name">Uranime</string>
    <string name="app_url">http://www.samcoles.co.uk</string>
    <string name="info_activity_title">App Info</string>
    <string name="animelist_refresh">Refreshing Animelist</string>
    <string name="search_hint">Anime name</string>
    <string name="searching">Returned local results and searching online now</string>
    <string name="searching_done">Finished searching..</string>
    <string name="updateall_yes">Update all</string>
    <string name="menu_updateart">Update Art</string>
    <string name="help">Help</string>
    <string name="sort">Sort</string>
    <string name="activity">activity</string>
    <string name="add_show">Add Show</string>
    <string name="preferences">Preferences</string>
    <string name="add_Show">Add Show</string>
    <string name="feedback">Feedback</string>
    <string name="fetchanimegenre">Fetching anime for specified genre.</string>
    <string name="menu_update_delta">Menu Update Delta</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="mark_watched">Mark as watched</string>
    <string name="mark_all_as_seen">Mark anime as watched</string>
    <string-array name="anime_status">
        <item>Finished airing</item>
        <item>Currently airing</item>
        <item>Unaired</item>
    </string-array>
    <string-array name="list_type">
        <item>Library + Watchlist</item>
        <item>Library</item>
        <item>Watchlist</item>
    </string-array>
    <string name="mark_all_as_unseen">Mark all episodes as unseen</string>
    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="type">NOT IN USE... JUST FOR setTag variables</string>
</resources>
