<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/menu_calendar"
        android:icon="@drawable/ic_action_calendar"
        android:showAsAction="ifRoom"
        android:title="@string/activity"/>
    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_update_delta"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/search_hint"/>
    <item 
        android:id="@+id/menu_full_update"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="never"
        android:title="@string/updateall_yes"/>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/ic_action_preferences"
        android:showAsAction="never"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_menu_help"
        android:showAsAction="never"
        android:title="@string/help"/>

</menu>