<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_update_delta"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/search_hint"/>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/ic_action_preferences"
        android:showAsAction="never"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/menu_seenall"
        android:icon="@drawable/ic_menu_markall"
        android:showAsAction="ifRoom"
        android:title="@string/mark_all_as_seen"/>
    <item
        android:id="@+id/menu_unseeall"
        android:icon="@drawable/ic_menu_unmarkall"
        android:showAsAction="ifRoom"
        android:title="@string/mark_all_as_unseen"
        />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_menu_help"
        android:showAsAction="never"
        android:title="@string/help"/>

</menu>